clusters/home/archives/nextjs-developer-portfolio/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextjs-developer-portfolio
  labels:
    app.kubernetes.io/name: nextjs-developer-portfolio
    app.kubernetes.io/instance: nextjs-developer-portfolio
spec:
  replicas: 3
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: nextjs-developer-portfolio
      app.kubernetes.io/instance: nextjs-developer-portfolio
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nextjs-developer-portfolio
        app.kubernetes.io/instance: nextjs-developer-portfolio
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchLabels:
                app.kubernetes.io/name: nextjs-developer-portfolio
                app.kubernetes.io/instance: nextjs-developer-portfolio
            topologyKey: "kubernetes.io/hostname"
      containers:
      - name: nextjs-developer-portfolio
        imagePullPolicy: IfNotPresent
        image: ghcr.io/pacholoamit/nextjs-portfolio:latest
        ports:
          - name: web
            containerPort: 3000
        startupProbe:
          tcpSocket:
            port: web
          initialDelaySeconds: 60
          timeoutSeconds: 5
          periodSeconds: 10
          failureThreshold: 6
