clusters/home/archives/nextjs-developer-portfolio/ingress.yaml

---
apiVersion: v1
kind: Service
metadata:
  name: nextjs-developer-portfolio
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: nextjs-developer-portfolio
  ports:
    - port: 3000
      targetPort: web

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextjs-developer-portfolio
  namespace: default
  annotations:
      kubernetes.io/ingress.class: nginx
      gethomepage.dev/enabled: "true"
      gethomepage.dev/description: Developer Portfolio
      gethomepage.dev/group: Apps/Services
      gethomepage.dev/icon: nextjs
      gethomepage.dev/name: Next.js Developer Portfolio
  labels:
    name: nextjs-developer-portfolio
spec:
  rules:
  - host: next.pacholoamit.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nextjs-developer-portfolio
            port: 
              number: 3000
